# gemmery

./: .gitignore  FINDINGS.md  IMPLEMENTATION_NOTES.md  README.md  pyproject.toml
.claude/: settings.json
experiments/: summary_matrix.py
experiments/complex_rules/: RESULTS.md  build_llm.py  llm_result.json  llm_truth.json  plot.py  rules_demo.py  score_llm.py
experiments/drift/: RESULTS.md  build.py  plot.py  result.json  score.py  truth.json
experiments/futures/: RESULTS.md  browser.html  build.py  choose.py  diff_top2.txt  futures.json  plot.py  trace.txt
experiments/futures_eval/: RESULTS.md  baselines.json  browser.html  build_eval.py  build_gap_cells.py  build_inferred.py  materialize.py  meta.json  record.py  result.json  result_gap_cells.json  result_inferred.json  result_mechanical.json  result_mechanical_r10.json  score.py  tips.json
experiments/gnosia/: RESULTS.md  build_experiment.py  engine.py  plot.py  result.json  score.py  truth.json
experiments/headroom_probe/: RESULTS.md  probe_tasks.py
experiments/integrated/: RESULTS.md  WHATS_IN_GIT.md  git_plan_tracking.py  integrated_demo.py  plot.py  show_whats_in_git.py
experiments/lme/: RESULTS.md  browser.html  build_lme.py  build_lme2.py  build_observer.py  fold_observations.py  fold_observations2.py  ingest_demo.py  (+10 more)
gemmery/: __init__.py  cli.py  model.py  valuation.py
tests/: conftest.py  test_browse.py  test_eval.py  test_hardening.py  test_index.py  test_model.py  test_prod.py  test_recall.py  test_store.py  test_tasks_v2.py  test_torture.py
tools/: scale_torture.py  store_browser.py
(+279 files in other folders)
